--- a/members.html
+++ b/members.html
@@ -254,7 +254,7 @@ cooking with lots of butter, petting one of her cats, watering her plants, or wo
     </<h8>
     </div>
         <div id="membersalexispicturecontainer">
-        <img src="https://raw.githubusercontent.com/anjalijayan415/OmahaTeenCouncil/master/alexis.jpg" alt="Alexis" width=250px height= 300px> 
+        <img src="images/alexis.jpg" alt="Alexis" width=250px height= 300px> 
         </div>
       <div id="membersalexisdescriptioncontainer">
          <p>Alexis Dickerson (she/her/hers) is a clinic-based health educator for Planned Parenthood where
